# python-ibmdb

./: README.md  ibm_db_ctx.py  ibm_db_dbi.py  ibmdb_tests.py  pyproject.toml  setup.py  testfunctions.py
.github/workflows/: tests.yaml
ibm_db_tests/: test_000_PrepareDb.py  test_001_ConnDb.py  test_002_ConnDbUncatalogedConn.py  test_003_NumAffectedRows.py  test_004_ConnWrongUserPwd.py  test_005_ConnBadUserBadPwd.py  test_006_ConnPassingOpts.py  test_007_pConnPassingOpts.py  test_008_ColumnInfo.py  test_010_UpdateRowCount.py  test_011_DeleteRowCount.py  test_012_KeysetDrivenCursorSelect01.py  test_013_KeysetDrivenCursorSelect02.py  test_014_KeysetDrivenCursorNegativeRow.py  test_015_InsertDeleteRowCount_01.py  test_016_InsertDeleteRowCount_02.py  test_017_selectRowcountPrefetchSTMTOpt.py  test_018_selectRowcountPrefetchSetOpt.py  test_019_selectRowcountPrefetchPrepOpt.py  test_020_RollbackDelete.py  test_021_CommitDelete.py  test_022_RollbackInsert.py  test_023_ColumnPrivileges.py  test_024_ForeignKeys.py  test_025_PrimaryKeys.py  test_030_Result.py  test_031_ResultIndexPosition.py  test_032_ResultIndexName.py  test_033_ResultOutSequenceColumn.py  test_034_FetchAssoc.py  test_035_FetchRow_01.py  test_036_FetchRow_02.py  test_037_FetchRowIndexPos.py  test_038_FetchRowIndexPosNested_01.py  test_039_FetchRowIndexPosNested_02.py  test_03a_ResultNonExistCol.py  test_040_FetchTuple.py  test_041_FetchTupleMany_01.py  test_042_FetchTupleMany_02.py  test_043_FetchTupleMany_03.py  (+137 more)
